# PropertyParser

./: CMakeLists.txt  README.md
include/: cstring.h  map.h  parser.h
src/: CMakeLists.txt  cstring.c  map.c  parser.c
tests/: CMakeLists.txt  cstring_test.c  map_test.c  parser_test.c  test.properties
